<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="hello">Hello World, FoodGroupsActivity!</string>
    <string name="app_name">FoodGroups</string>
    <string name="leaderboard">Leader Board</string>
    <string name="restaurantcheckin">Restaurant Check In</string>
    <string name="homecooking">Home Cooking</string>
    <string name="searchrecipes">Search Recipes</string>
    <string name="menu">Menu</string>
    <string name="back">Back</string>
    <string name="today">Today</string>
    <string name="thisweek">This Week</string>
    <string name="alltime">All Time</string>
    <string name="addfriends">Add Friends</string>
    <string name="fruit"> Fruit </string>
    <string name="vegetable"> Vegetable </string>
    <string name="protein"> Protein </string>
    <string name="carbohydrate"> Carbohydrate </string>
    <string name="recipetitle">Recipe Title:</string>
    <string name="addrecipe">[optional] Add Recipe Here</string>
    <string name="done">Done</string>
    <string name="selectfriends">Select the Friends You Want to Cook With:</string>  
    <string name="search">Search for Recipes:</string>
    <string name="searchbutton">Search</string>
    <string name="blank"></string>
    <string name="servings">          Servings:</string>
    <string name="planmeal">Plan Meal</string>
    <string name="profile">Profile</string>
    <string name="fb">fb</string>
    <color name="black">#000000</color>
    <color name="white">#ffffff</color>
    <color name="grey">#aaaaaa</color>
</resources>
