<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    >
<Button android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/leaderboard" android:id="@+id/leaderboard_button"></Button>
<Button android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/homecooking" android:id="@+id/homecooking_button"></Button>
<Button android:layout_width="wrap_content" android:id="@+id/restaurant_button" android:layout_height="wrap_content" android:text="@string/restaurantcheckin"></Button>
<Button android:layout_width="wrap_content" android:id="@+id/recipesearch_button" android:layout_height="wrap_content" android:text="@string/searchrecipes"></Button>
</LinearLayout>
