<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
  xmlns:android="http://schemas.android.com/apk/res/android"
  android:orientation="vertical"
  android:layout_width="fill_parent"
  android:layout_height="fill_parent">
    <LinearLayout android:layout_height="wrap_content" android:id="@+id/linearLayout1" android:layout_width="match_parent" android:layout_weight="20" android:gravity="center_horizontal">
        <Button android:layout_height="wrap_content" android:text="@string/today" android:layout_width="wrap_content" android:id="@+id/todaybutton"></Button>
        <Button android:layout_height="wrap_content" android:text="@string/thisweek" android:layout_width="wrap_content" android:id="@+id/thisweekbutton"></Button>
        <Button android:layout_height="wrap_content" android:text="@string/alltime" android:layout_width="wrap_content" android:id="@+id/alltimebutton"></Button>
    </LinearLayout>
    <ListView android:layout_height="wrap_content" android:layout_width="match_parent" android:layout_weight="60" android:id="@+id/leaderboardlist" android:padding="5dip"></ListView>
    <Button android:layout_height="wrap_content" android:text="@string/back" android:id="@+id/leaderboardback"  android:layout_width="wrap_content" android:layout_weight="20"></Button>
    
</LinearLayout>
