<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
  xmlns:android="http://schemas.android.com/apk/res/android"
  android:orientation="vertical"
  android:layout_width="fill_parent"
  android:layout_height="fill_parent">
    <TextView android:layout_width="wrap_content" android:id="@+id/textView1" android:layout_height="wrap_content" android:layout_alignParentTop="true" android:layout_alignLeft="@+id/button1" android:layout_marginTop="17dp" android:text="@string/search"></TextView>
    <Button android:layout_width="wrap_content" android:layout_height="wrap_content" android:id="@+id/button2" android:layout_alignBaseline="@+id/button1" android:layout_alignBottom="@+id/button1" android:layout_alignParentRight="true" android:layout_marginRight="16dp" android:text="@string/done"></Button>
    <EditText android:id="@+id/editText1" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_below="@+id/textView1" android:layout_alignParentLeft="true" android:layout_marginTop="14dp" android:layout_alignParentRight="true" android:hint="Search">
        <requestFocus></requestFocus>
    </EditText>
    <ListView android:id="@+id/listView1" android:layout_width="match_parent" android:layout_alignParentLeft="true" android:layout_below="@+id/editText1" android:layout_height="320dp"></ListView>
    <Button android:id="@+id/button1" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/back" android:layout_alignParentBottom="true" android:layout_alignParentLeft="true" android:layout_marginLeft="17dp" android:layout_marginBottom="18dp"></Button>
    
</RelativeLayout>
