<?xml version="1.0" encoding="utf-8"?>
    <LinearLayout android:id="@+id/linearLayout1" android:layout_width="fill_parent" android:layout_height="fill_parent" xmlns:android="http://schemas.android.com/apk/res/android" android:orientation="vertical">
        <TimePicker android:layout_width="fill_parent" android:id="@+id/timePicker1" android:layout_height="wrap_content"></TimePicker>
        <DatePicker android:id="@+id/datePicker1" android:layout_width="fill_parent" android:layout_height="wrap_content"></DatePicker>
        <LinearLayout android:layout_width="fill_parent" android:id="@+id/linearLayout3" android:layout_height="wrap_content">
            <TextView android:text="TextView" android:id="@+id/textView1" android:layout_width="wrap_content" android:layout_height="wrap_content"></TextView>
            <Button android:layout_width="wrap_content" android:id="@+id/addfriends_button" android:layout_height="wrap_content" android:text="@string/addfriends"></Button>
        </LinearLayout>
        <EditText android:layout_width="fill_parent" android:id="@+id/editText1" android:layout_height="wrap_content" android:inputType="textMultiLine">
            <requestFocus></requestFocus>
        </EditText>
        <LinearLayout android:layout_width="wrap_content" android:id="@+id/linearLayout2" android:layout_height="fill_parent">
            <Button android:text="@string/back" android:layout_width="wrap_content" android:id="@+id/planmealback_button" android:layout_height="wrap_content"></Button>
            <Button android:text="@string/done" android:layout_width="wrap_content" android:id="@+id/planmealdone_button" android:layout_height="wrap_content"></Button>
        </LinearLayout>
    </LinearLayout>
